# strainscape

./: .gitignore  Dockerfile  README.md  amr_coverages.sh  combine_instrain.sh  config.yaml  drep.sh  filter_cov.sh  iHMP_bash.sh  iHMP_cluster.py  iHMP_combine_snv_mutations.py  iHMP_filter.py  iHMP_main.py  iHMP_map.py  iHMP_mutation.py  iHMP_trajectory.py  iHMP_trends.py  instrain.sh  list_files.sh  pyproject.toml  run_pipeline.sh  setup.py  slurm-3019024.out  snakemake_instrain.sh  summarize_coverages.py
.github/workflows/: ci.yml
.snakemake/metadata/: L1VzZXJzL3JlbmVlb2xlcy9EZXNrdG9wL2lucHV0L2luc3RyYWluL00yMDY5L1NOVl9maWx0ZXJlZC50eHQ=  L1VzZXJzL3JlbmVlb2xlcy9EZXNrdG9wL2lucHV0L2luc3RyYWluL00yMDY5L1NOVl9maWx0ZXJlZF90cmVuZC50eHQ=  (+5 more)
docs/: pipeline_overview.md
ihmp_analysis/: __init__.py  coverage.py
input/metadata/: fastq_files_list2.txt  (+1 more)
scripts/: summarize_coverages.py  summarize_coverages.sh
snakemake/: Snakefile  instrain_mags.smk
strainscape/: analyze_mutation_types.py  calculate_combined_stats.py  calculate_trends.py  classify_events.py  collapse_mutations.py  combine_flagstats.py  combine_processed_scaffolds.py  combine_trend_mapped_types.py  filter_mutations.py  hotspot_finder.py  make_bin_txt.py  map_genes.py  oxidative_signatures.py  parse_prodigal.py  prepare_trajectories.py  preprocess_snvs.py  process_scaffolds.py  r_prep.py  snv_calprotectin_corr.py  snv_sweeps_enrichment.py  sweep_calprotectin_cor_larry.py  update_patients.py  utils.py  wildcards.py  wildcards.smk
tests/: pytest.ini  requirements-test.txt  test_sweep_calprotectin_cor_larry.py
(+1879 files in other folders)
